--- a/src/resource/css/basic.css
+++ b/src/resource/css/basic.css
@@ -1,5 +1,3 @@
-
-
 #hydra-ui {
     position: fixed;
     top: 0px;
@@ -8,14 +6,17 @@
     height: 100%;
 }
 
+.modal {
+    color: black;
+}
 
-#hydra-ui canvas{
+#hydra-ui canvas {
     width: 100%;
     height: 100%;
     aspect-ratio: auto 1920 / 1080;
 }
 
-body{
+body {
     background: #000;
     margin: 0px;
     padding: 0px;
@@ -25,23 +26,23 @@ body{
     line-height: 1.4;
 }
 
-button{ 
+button {
     background: #363636 !important;
     border: 2px solid #2c2c2c !important;
     border-radius: 0% !important;
 }
 
-.selectedAction{
+.selectedAction {
     background-color: white !important;
     color: #464646;
 }
 
-.selectedChannel{
+.selectedChannel {
     background-color: white !important;
     color: #464646;
 }
 
-.VitreousWelcome{
+.VitreousWelcome {
     text-align: left !important;
     display: block;
     background: #7676768a;
@@ -50,65 +51,105 @@ button{
     margin: 100px;
     border: 5px solid #0000004f;
     margin-left: 10px;
-} 
+}
 
-.liveChannel{
+.liveChannel {
     background: #740000 !important;
     border: 2px solid #ac0000 !important;
     border-radius: 0% !important;
 }
 
-.liveChannel.selectedChannel{
+.liveChannel.selectedChannel {
     background-color: white !important;
     color: #740000;
 }
+
 .navbar-custom {
     z-index: 99;
     height: 100%;
 }
+
 div.height100 {
     height: 100%;
 }
+
 div.height90 {
     height: 90%;
 }
+
 div.height97 {
     height: 97%;
 }
+
 div.height3 {
     height: 3%;
 }
-.CodeMirror{
+
+.CodeMirror {
     min-height: 100%;
 }
-.spacingRow{
-    padding: 10px 0px;;
+
+.spacingRow {
+    padding: 10px 0px;
+    ;
 }
-.code{
+
+.code {
     background: #282a36;
 }
-.mix{
+
+.mix {
     background: #505050;
 }
-.tv{ 
+
+.tv {
     padding-top: 10px;
 }
-.tv #hydra-canvas{
+
+.tv #hydra-canvas {
     border: 3px solid white;
     background: black;
 }
-.multychannel{
-    
+
+.multychannel {
+
     max-height: 430px;
     overflow: hidden;
     overflow-y: auto;
 
 }
-.button-channel{
-    
-}
 
-#codejs{
+.button-channel {}
+
+#codejs {
     max-height: 100%;
     overflow-y: auto;
+}
+
+.ͼd {
+    color: #00fb97;
+}
+
+.ͼm {
+    color: #e16400;
+}
+
+.dropdown-menu li {
+    position: relative;
+}
+
+.dropdown-menu .dropdown-submenu {
+    display: none;
+    position: absolute;
+    left: 100%;
+    top: -7px;
+}
+
+.dropdown-menu .dropdown-submenu-left {
+    right: 100%;
+    left: auto;
+}
+
+.dropdown-menu>li:hover>.dropdown-submenu {
+    display: block;
 }
