--- a/src/resource/css/basic.css
+++ b/src/resource/css/basic.css
@@ -137,7 +137,19 @@ div.height3 {
 .dropdown-menu li {
     position: relative;
 }
-
+a.dropdown-toggle{
+    padding-bottom: 0px;
+}
+a.dropdown-toggle{
+    padding-bottom: 0px;
+}
+ul.dropdown-menu{
+    background-color: #212529;
+    border: 1px;
+}
+a.dropdown-item{
+    color: #ababab;
+}
 .dropdown-menu .dropdown-submenu {
     display: none;
     position: absolute;
